JSON for Images
Modified how images are added

--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
   </nav>
 
   <header>
-    <h1>Your Name</h1>
+    <h1>Yvon Lu</h1>
     <p>Charcoal & Graphite Artist</p>
   </header>
 
+  <section class="gallery">
+  <!-- Images will load here via JS -->
+  </section>
+
+  <!-- Previous Interation: Images on HTML
   <section class="gallery">
     <div class="art-piece" onclick="openModal(this)">
       <img src="images/art1.jpg" alt="Art 1" />
@@ -35,7 +40,7 @@
       <img src="images/art2.jpg" alt="Art 2" />
       <p class="caption">"Morning Light" — Available</p>
     </div>
-  </section>
+  </section> -->
 
   <div id="modal" onclick="closeModal()">
     <img id="modal-img" src="" alt="Zoomed Art" />
