--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <nav>
     <ul>
       <li><a href="#">About</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
       <li class="dropdown">
         <a href="#">Collections ▾</a>
         <ul class="dropdown-content">
