--- a/gallery.html
+++ b/gallery.html
@@ -149,7 +149,7 @@
     }
 
     function loadCollection(collection) {
-      fetch(`artworks/${collection}.json`)
+      fetch(`collections/${collection}.json`)
         .then(res => res.json())
         .then(data => {
           gallery.innerHTML = '';
