--- a/index.html
+++ b/index.html
@@ -2,51 +2,106 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Art Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yvon Does Art</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <nav>
     <ul>
-      <li><a href="#">About</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li class="dropdown">
-        <a href="#">Collections ▾</a>
-        <ul class="dropdown-content">
-          <li><a href="#">Sketches</a></li>
-          <li><a href="#">Portraits</a></li>
-          <li><a href="#">Landscapes</a></li>
-        </ul>
-      </li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#collections">Collections</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
-  <header>
-    <h1>Yvon Lu</h1>
-    <p>Charcoal & Graphite Artist</p>
-  </header>
-
-  <section class="gallery">
-  <!-- Images will load here via JS -->
+  <section id="about">
+    <h2>About</h2>
+    <p>Welcome to Yvon's world of charcoal and graphite. This section will include a full bio, artistic influences, and creative process.</p>
   </section>
 
-  <!-- Previous Interation: Images on HTML
-  <section class="gallery">
-    <div class="art-piece" onclick="openModal(this)">
-      <img src="images/art1.jpg" alt="Art 1" />
-      <p class="caption">"Stillness" — Sold</p>
+  <section id="collections">
+    <h2>Collections</h2>
+    <div class="collections-bar" id="collections-bar">
+      <div class="collection-tab active" data-collection="portraits">Portraits</div>
+      <div class="collection-tab" data-collection="sketches">Sketches</div>
+      <div class="collection-tab" data-collection="landscapes">Landscapes</div>
+      <div class="collection-tab" data-collection="abstracts">Abstracts</div>
+      <div class="collection-tab" data-collection="ink">Ink Work</div>
     </div>
-    <div class="art-piece" onclick="openModal(this)">
-      <img src="images/art2.jpg" alt="Art 2" />
-      <p class="caption">"Morning Light" — Available</p>
-    </div>
-  </section> -->
+    <section class="gallery" id="gallery"></section>
+  </section>
 
-  <div id="modal" onclick="closeModal()">
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>You can reach out via email for inquiries, commissions, or collaborations.</p>
+    <a href="mailto:your.email@example.com">your.email@example.com</a>
+  </section>
+
+  <div id="modal" onclick="closeModal(event)">
     <img id="modal-img" src="" alt="Zoomed Art" />
+    <button class="inquiry-button" onclick="openInquiry(event)">Inquire About This Piece</button>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    const tabs = document.querySelectorAll('.collection-tab');
+    const gallery = document.getElementById('gallery');
+    const modal = document.getElementById('modal');
+    const modalImg = document.getElementById('modal-img');
+    let currentArtTitle = '';
+
+    function setActiveTab(selectedTab) {
+      tabs.forEach(tab => tab.classList.remove('active'));
+      selectedTab.classList.add('active');
+    }
+
+    function loadCollection(collection) {
+      fetch(`artworks/${collection}.json`)
+        .then(res => res.json())
+        .then(data => {
+          gallery.innerHTML = '';
+          data.forEach(art => {
+            const div = document.createElement('div');
+            div.className = 'art-piece';
+            div.innerHTML = `
+              <img src="images/${art.filename}" alt="${art.title}" onclick="openModal(event, '${art.filename}', '${art.title}')" />
+              <p class="caption">"${art.title}" — ${art.status}</p>
+            `;
+            gallery.appendChild(div);
+          });
+        })
+        .catch(err => {
+          gallery.innerHTML = '<p style="color: red;">Error loading collection.</p>';
+        });
+    }
+
+    tabs.forEach(tab => {
+      tab.addEventListener('click', () => {
+        setActiveTab(tab);
+        loadCollection(tab.dataset.collection);
+      });
+    });
+
+    function openModal(event, filename, title) {
+      event.stopPropagation();
+      currentArtTitle = title;
+      modal.style.display = 'flex';
+      modalImg.src = `images/${filename}`;
+    }
+
+    function closeModal(event) {
+      if (event.target.id === 'modal' || event.target.tagName === 'IMG') {
+        modal.style.display = 'none';
+      }
+    }
+
+    function openInquiry(event) {
+      event.stopPropagation();
+      const mailto = `mailto:your.email@example.com?subject=Inquiry about "${currentArtTitle}"`;
+      window.location.href = mailto;
+    }
+
+    loadCollection('portraits');
+  </script>
 </body>
 </html>
