--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <li><a href="#">About</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li class="dropdown">
-        <a href="#">Collections ▾</a>
+
+        <!-- Placeholder for Yvon to see if she likes dropd} -->
+        <a href="#">Collections ▾</a> 
         <ul class="dropdown-content">
           <li><a href="#">Sketches</a></li>
           <li><a href="#">Portraits</a></li>
