--- a/gallery.html
+++ b/gallery.html
@@ -127,7 +127,7 @@
 </head>
 <body>
   <nav>
-    <a href="index.html" style="color:#eee;text-decoration:none;font-size:1.2rem;font-weight:bold;">← Back to Home</a>
+    <a href="index.html" style="color:#eee;text-decoration:none;font-size:1.2rem;font-weight:bold;">Back to Home</a>
   </nav>
 
   <section class="collections-section">
