--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <p class="collection-description" id="collection-description"></p> 
     </section>
 
-    <section class="gallery" id="gallery"></section>
+    <section id="gallery"></section>
 
     <div id="modal" onclick="closeModal(event)">
       <img id="modal-img" src="" alt="Zoomed Art" />
@@ -153,10 +153,6 @@
     <p>You can reach out via email for inquiries, commissions, or collaborations.</p>
     <a href="mailto:your.email@example.com">your.email@example.com</a>
   </section>
-
-  <div id="modal" onclick="closeModal()">
-    <img id="modal-img" src="" alt="Zoomed Art" />
-  </div>
 
   <script src="script.js"></script>
 
