--- a/index.html
+++ b/index.html
@@ -31,105 +31,34 @@
   </header>
 
    <!-- testing one-pager. Remove later -->
-  <section class="gallery">
-    <section class="collections-section">
-      <h2>Collections</h2>
-      <div class="collections-bar" id="collections-bar">
-        <div class="collection-tab active" data-collection="portraits">Portraits</div>
-        <div class="collection-tab" data-collection="sketches">Sketches</div>
-        <div class="collection-tab" data-collection="landscapes">Landscapes</div>
-        <div class="collection-tab" data-collection="abstracts">Abstracts</div>
-        <div class="collection-tab" data-collection="ink">Ink Work</div>
-      </div>
-      <p class="collection-description" id="collection-description"></p> 
-    </section>
-
-    <section id="gallery"></section>
-
-    <div id="modal" onclick="closeModal(event)">
-      <img id="modal-img" src="" alt="Zoomed Art" />
-      <button class="inquiry-button" onclick="toggleForm(event)">Inquire About This Piece</button>
-      <form id="inquiry-form" action="https://formsubmit.co/icaroabacelar@gmail.com" method="POST" onsubmit="submitForm(event)" style="display: none;">
-        <input type="hidden" name="artTitle" id="form-art-title" />
-        <label>Your Name: <input type="text" name="name" required /></label>
-        <label>Your Email: <input type="email" name="email" required /></label>
-        <label>Message: <textarea name="message" rows="4" required></textarea></label>
-        <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
-        <button type="submit">Send Inquiry</button>
-      </form>
+  <section class="collections-section">
+    <h2>Collections</h2>
+    <div class="collections-bar" id="collections-bar">
+      <div class="collection-tab active" data-collection="portraits">Portraits</div>
+      <div class="collection-tab" data-collection="sketches">Sketches</div>
+      <div class="collection-tab" data-collection="landscapes">Landscapes</div>
+      <div class="collection-tab" data-collection="abstracts">Abstracts</div>
+      <div class="collection-tab" data-collection="ink">Ink Work</div>
     </div>
-
-    <script>
-      const tabs = document.querySelectorAll('.collection-tab');
-      const gallery = document.getElementById('gallery');
-      const modal = document.getElementById('modal');
-      const modalImg = document.getElementById('modal-img');
-      const form = document.getElementById('inquiry-form');
-      const formArtTitle = document.getElementById('form-art-title');
-      const description = document.getElementById('collection-description');
-      let currentArtTitle = '';
-
-      function setActiveTab(selectedTab) {
-        tabs.forEach(tab => tab.classList.remove('active'));
-        selectedTab.classList.add('active');
-      }
-
-      function loadCollection(collection) {
-        fetch(`collections/${collection}.json`)
-          .then(res => res.json())
-          .then(data => {
-            gallery.innerHTML = '';
-            description.textContent = data.description || '';
-            (data.artworks || data).forEach(art => {
-              const div = document.createElement('div');
-              div.className = 'art-piece';
-              div.innerHTML = `
-                <img src="images/${art.filename}" alt="${art.title}" onclick="openModal(event, '${art.filename}', '${art.title}')" />
-                <p class="caption">"${art.title}" — ${art.status}</p>
-              `;
-              gallery.appendChild(div);
-            });
-          })
-          .catch(err => {
-            gallery.innerHTML = '<p style="color: red;">Error loading collection.</p>';
-          });
-      }
-
-      tabs.forEach(tab => {
-        tab.addEventListener('click', () => {
-          setActiveTab(tab);
-          loadCollection(tab.dataset.collection);
-        });
-      });
-
-      function openModal(event, filename, title) {
-        event.stopPropagation();
-        currentArtTitle = title;
-        modal.style.display = 'flex';
-        modalImg.src = `images/${filename}`;
-        form.style.display = 'none'; 
-      }
-
-      function closeModal(event) {
-        if (event.target.id === 'modal' || event.target.tagName === 'IMG') {
-          modal.style.display = 'none';
-        }
-      }
-
-      function toggleForm(event) {
-        event.stopPropagation();
-        form.style.display = 'flex';
-        formArtTitle.value = currentArtTitle;
-      }
-
-      function submitForm(event) {
-        alert("Your inquiry has been submitted!");
-      }
-
-      loadCollection('portraits');
-    </script>
+    <p class="collection-description" id="collection-description"></p> 
   </section>
+
+  <!-- ✅ FIX: changed class here to apply gallery styles directly -->
+  <section id="gallery" class="gallery"></section>
+
+  <div id="modal" onclick="closeModal(event)">
+    <img id="modal-img" src="" alt="Zoomed Art" />
+    <button class="inquiry-button" onclick="toggleForm(event)">Inquire About This Piece</button>
+    <form id="inquiry-form" action="https://formsubmit.co/icaroabacelar@gmail.com" method="POST" onsubmit="submitForm(event)" style="display: none;">
+      <input type="hidden" name="artTitle" id="form-art-title" />
+      <label>Your Name: <input type="text" name="name" required /></label>
+      <label>Your Email: <input type="email" name="email" required /></label>
+      <label>Message: <textarea name="message" rows="4" required></textarea></label>
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
+      <button type="submit">Send Inquiry</button>
+    </form>
+  </div>
 
   <!-- Previous Interation: Images on HTML
   <section class="gallery">
@@ -154,7 +83,75 @@
     <a href="mailto:your.email@example.com">your.email@example.com</a>
   </section>
 
-  <script src="script.js"></script>
+  <script>
+    const tabs = document.querySelectorAll('.collection-tab');
+    const gallery = document.getElementById('gallery');
+    const modal = document.getElementById('modal');
+    const modalImg = document.getElementById('modal-img');
+    const form = document.getElementById('inquiry-form');
+    const formArtTitle = document.getElementById('form-art-title');
+    const description = document.getElementById('collection-description');
+    let currentArtTitle = '';
+
+    function setActiveTab(selectedTab) {
+      tabs.forEach(tab => tab.classList.remove('active'));
+      selectedTab.classList.add('active');
+    }
+
+    function loadCollection(collection) {
+      fetch(`collections/${collection}.json`)
+        .then(res => res.json())
+        .then(data => {
+          gallery.innerHTML = '';
+          description.textContent = data.description || '';
+          (data.artworks || data).forEach(art => {
+            const div = document.createElement('div');
+            div.className = 'art-piece';
+            div.innerHTML = `
+              <img src="images/${art.filename}" alt="${art.title}" onclick="openModal(event, '${art.filename}', '${art.title}')" />
+              <p class="caption">"${art.title}" — ${art.status}</p>
+            `;
+            gallery.appendChild(div);
+          });
+        })
+        .catch(err => {
+          gallery.innerHTML = '<p style="color: red;">Error loading collection.</p>';
+        });
+    }
+
+    tabs.forEach(tab => {
+      tab.addEventListener('click', () => {
+        setActiveTab(tab);
+        loadCollection(tab.dataset.collection);
+      });
+    });
+
+    function openModal(event, filename, title) {
+      event.stopPropagation();
+      currentArtTitle = title;
+      modal.style.display = 'flex';
+      modalImg.src = `images/${filename}`;
+      form.style.display = 'none'; 
+    }
+
+    function closeModal(event) {
+      if (event.target.id === 'modal' || event.target.tagName === 'IMG') {
+        modal.style.display = 'none';
+      }
+    }
+
+    function toggleForm(event) {
+      event.stopPropagation();
+      form.style.display = 'flex';
+      formArtTitle.value = currentArtTitle;
+    }
+
+    function submitForm(event) {
+      alert("Your inquiry has been submitted!");
+    }
+
+    loadCollection('portraits');
+  </script>
 
 <!-- testing one-pager. Remove later -->
   <style>
