--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <div id="modal-content">
       <img id="modal-img" src="" alt="Zoomed Art" />
       <div class="modal-form-container">
-        <button class="inquiry-button" onclick="toggleForm(event)">Inquire About This Piece</button>
+        <h3 class="form-title">Inquire About This Piece</h3>
         <!-- Using my email, replace with yvon. Can also make it a string to keep email hidden -->
-        <form id="inquiry-form" action="https://formsubmit.co/icaroabacelar@gmail.com" method="POST" onsubmit="submitForm(event)" style="display: none;">
+        <form id="inquiry-form" action="https://formsubmit.co/icaroabacelar@gmail.com" method="POST" onsubmit="submitForm(event)">
           <input type="hidden" name="artTitle" id="form-art-title" />
           <label>Your Name: <input type="text" name="name" required /></label>
           <label>Your Email: <input type="email" name="email" required /></label>
@@ -136,19 +136,13 @@
       currentArtTitle = title;
       modal.style.display = 'flex';
       modalImg.src = `images/${filename}`;
-      form.style.display = 'none'; 
+      formArtTitle.value = currentArtTitle;
     }
 
     function closeModal(event) {
       if (event.target.id === 'modal' || event.target.tagName === 'IMG') {
         modal.style.display = 'none';
       }
-    }
-
-    function toggleForm(event) {
-      event.stopPropagation();
-      form.style.display = 'flex';
-      formArtTitle.value = currentArtTitle;
     }
 
     function submitForm(event) {
@@ -325,6 +319,13 @@
 
     .modal-form-container button:hover {
       background-color: #666;
+    }
+
+    .form-title {
+      margin: 0.5rem 0;
+      color: white;
+      font-size: 1.2rem;
+      text-align: center;
     }
 
     @media (max-width: 768px) {
