--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </header>
 
    <!-- testing one-pager. Remove later -->
-  <section class="collections-section">
+  <section id="gallery" class="collections-section">
     <h2>Collections</h2>
     <div class="collections-bar" id="collections-bar">
       <div class="collection-tab active" data-collection="portraits">Portraits</div>
@@ -40,15 +40,16 @@
       <div class="collection-tab" data-collection="abstracts">Abstracts</div>
       <div class="collection-tab" data-collection="ink">Ink Work</div>
     </div>
-    <p class="collection-description" id="collection-description"></p> 
-  </section>
+    <p class="collection-description" id="collection-description"></p>
 
-  
-  <section id="gallery" class="gallery"></section>
+    <!-- Move the image grid inside this same section -->
+    <div class="gallery" id="gallery-images"></div>
+  </section>
 
 
   <div id="modal" onclick="closeModal(event)">
     <div id="modal-content">
+      <button id="modal-close" onclick="closeModal(event)">×</button>
       <img id="modal-img" src="" alt="Zoomed Art" />
       <div class="modal-form-container">
         <h3 class="form-title">Inquire About This Piece</h3>
@@ -101,7 +102,7 @@
 
   <script>
     const tabs = document.querySelectorAll('.collection-tab');
-    const gallery = document.getElementById('gallery');
+    const gallery = document.getElementById('gallery-images');
     const modal = document.getElementById('modal');
     const modalImg = document.getElementById('modal-img');
     const form = document.getElementById('inquiry-form');
@@ -174,7 +175,7 @@
 
       setTimeout(() => {
         toast.classList.remove('show');
-      }, 3000); // Show for 3 seconds
+      }, 4000); // Show for 3 seconds
     }
 
 
@@ -192,7 +193,7 @@
     }
 
     .collections-section {
-      padding: 1rem 1.5rem 0;
+      padding: 0rem 0rem 0;
     }
 
     .collections-section h2 {
@@ -205,7 +206,7 @@
       overflow-x: auto;
       white-space: nowrap;
       background-color: #222;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 0rem;
       scrollbar-width: none;
     }
 
@@ -215,26 +216,29 @@
 
     .collection-tab {
       display: inline-block;
-      color: #bbb;
-      border: 1px solid #444;
-      border-radius: 20px;
-      padding: 0.4rem 1rem;
-      margin-right: 0.5rem;
+      color: #ccc;
+      border: 1px solid #555;
+      padding: 0.5rem 1.2rem;
+      margin-right: -1px; /* ensures borders align cleanly */
       cursor: pointer;
-      transition: background-color 0.3s;
+      background-color: #222;
+      font-weight: 500;
+      transition: background-color 0.3s, box-shadow 0.2s;
     }
 
     .collection-tab.active {
-      background-color: #555;
+      background-color: #333;
       color: #fff;
-      border-color: #fff;
+      box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.6); /* pressed-in effect */
+      border-color: #888;
+      position: relative;
+      z-index: 1;
     }
 
     .collection-tab:hover {
-      background-color: #333;
+      background-color: #2a2a2a;
     }
-
-    .gallery {
+        .gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -366,7 +370,7 @@
       border-radius: 8px;
       padding: 1rem;
       position: fixed;
-      bottom: 2rem;
+      bottom: 40%;
       left: 50%;
       transform: translateX(-50%);
       z-index: 999;
