--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <!-- For the i-frame. Avoid redirection -->
   <iframe name="hidden_iframe" style="display:none;"></iframe>
   <!-- For the toast -->
-  <div id="toast" class="toast">Thank you! Your message has been sent.</div>
+  <div id="toast" class="toast">Thank you! Your inquiry has been received.</div>
 
   <!-- Previous Interation: Images on HTML
   <section class="gallery">
@@ -152,7 +152,20 @@
     }
 
     function closeModal(event) {
-      if (event.target.id === 'modal' || event.target.tagName === 'IMG') {
+      const modalContent = document.getElementById('modal-content');
+
+      // Shrink safe zone by adding a buffer box slightly *larger* than modal-content
+      const rect = modalContent.getBoundingClientRect();
+      const buffer = 10; // pixels of tolerance
+
+      const isInsideSafeZone = (
+        event.clientX > rect.left - buffer &&
+        event.clientX < rect.right + buffer &&
+        event.clientY > rect.top - buffer &&
+        event.clientY < rect.bottom + buffer
+      );
+
+      if (!isInsideSafeZone) {
         modal.style.display = 'none';
       }
     }
@@ -206,39 +219,69 @@
       overflow-x: auto;
       white-space: nowrap;
       background-color: #222;
-      padding: 0.5rem 0rem;
+      padding: 0.5rem 0;
       scrollbar-width: none;
+      position: relative;
     }
 
     .collections-bar::-webkit-scrollbar {
       display: none;
     }
 
+    /* Fading Edges */
+    .collections-bar::before,
+    .collections-bar::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 1.5rem;
+      z-index: 1;
+      pointer-events: none;
+    }
+
+    .collections-bar::before {
+      left: 0;
+      background: linear-gradient(to right, #111, transparent);
+    }
+
+    .collections-bar::after {
+      right: 0;
+      background: linear-gradient(to left, #111, transparent);
+    }
+
     .collection-tab {
       display: inline-block;
-      color: #ccc;
-      border: 1px solid #555;
-      padding: 0.5rem 1.2rem;
-      margin-right: -1px; /* ensures borders align cleanly */
-      cursor: pointer;
+      color: #bbb;
       background-color: #222;
-      font-weight: 500;
-      transition: background-color 0.3s, box-shadow 0.2s;
+      border-left: 1px solid #555;
+      border-right: 1px solid #555;
+      padding: 0.6rem 1.2rem;
+      margin: 0;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      flex-shrink: 0;
+    }
+
+    .collection-tab:first-child {
+      border-left: none;
+    }
+
+    .collection-tab:last-child {
+      border-right: none;
     }
 
     .collection-tab.active {
-      background-color: #333;
+      background-color: #444;
       color: #fff;
-      box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.6); /* pressed-in effect */
-      border-color: #888;
-      position: relative;
-      z-index: 1;
+      box-shadow: inset 0 -2px 0 #fff; /* simulate "pressed" */
     }
 
     .collection-tab:hover {
-      background-color: #2a2a2a;
+      background-color: #333;
     }
-        .gallery {
+
+    .gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -382,6 +425,24 @@
     .toast.show {
       visibility: visible;
       opacity: 1;
+    }
+
+    #modal-close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 1.8rem;
+      color: white;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      z-index: 20;
+      padding: 0;
+      line-height: 1;
+    }
+
+    #modal-close:hover {
+      color: #ccc;
     }
 
     @media (max-width: 768px) {
