--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
     <div class="collections-bar" id="collections-bar">
       <div class="collection-tab active" data-collection="portraits">Portraits</div>
       <div class="collection-tab" data-collection="sketches">Sketches</div>
-      <div class="collection-tab" data-collection="landscapes">Landscapes</div>
-      <div class="collection-tab" data-collection="abstracts">Abstracts</div>
-      <div class="collection-tab" data-collection="ink">Ink Work</div>
+      <div class="collection-tab" data-collection="artworks">Artworks</div>
     </div>
     <p class="collection-description" id="collection-description"></p>
 
@@ -217,6 +215,12 @@
       margin-bottom: 0.5rem;
     }
 
+    .collections-section h2,
+    #about h2,
+    #contact h2 {
+      padding-left: 1.5rem; /* or use margin-left: 1.5rem; */
+    }
+
     .collections-bar {
       display: flex;
       overflow-x: auto;
@@ -225,6 +229,7 @@
       padding: 0.5rem 0;
       scrollbar-width: none;
       position: relative;
+      align-items: stretch;
     }
 
     .collections-bar::-webkit-scrollbar {
@@ -254,7 +259,9 @@
     }
 
     .collection-tab {
-      display: inline-block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       color: #bbb;
       background-color: #222;
       border-left: 1px solid #555;
@@ -264,6 +271,8 @@
       cursor: pointer;
       transition: background-color 0.3s;
       flex-shrink: 0;
+      min-height: 100%; /* NEW: ensures it fills parent height */
+      box-sizing: border-box; /* ensures padding doesn't overflow */
     }
 
     .collection-tab:first-child {
@@ -277,11 +286,15 @@
     .collection-tab.active {
       background-color: #444;
       color: #fff;
-      box-shadow: inset 0 -2px 0 #fff; /* simulate "pressed" */
+      box-shadow: none
     }
 
     .collection-tab:hover {
       background-color: #333;
+    }
+
+    .collection-description {
+      padding-left: 1.5rem;
     }
 
     .gallery {
